supertokens-docker-postgresql/helm-chart/echo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supertoken-ingress
  namespace: supertoken
spec:
  ingressClassName: nginx
  rules:
  - host: 174.138.122.54.nip.io
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: supertokens
              port:
                number: 3567
status:
  loadBalancer:
    ingress:
    - hostname: 174.138.122.54.nip.io
